--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 */
 /* Table of Content
 ==================================================
-- Grid
+- Grid System
 - Primary Style
 - Header Components
 - Animated Hamburguer Icon
@@ -23,7 +23,9 @@
 @import url("https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i|Maven+Pro:400,500,700,900|Oswald:400");
 /* -------------------------------- 
 
-Grid
+Grid System
+
+Acknowledgement: Special thanks to it's author Alex Garcia, a classmate and one of my partners at our final project www.PlumageCSS.com, from which I took this grid. 
 
 -------------------------------- */
 /*CONTENT CONTAINER BASED ON 960PX*/
@@ -335,65 +337,58 @@ Hamburguer Icon
       margin: 1.5em 1em 0 0; } }
   @media only screen and (min-width: 1170px) {
     #hamb-nav {
-      display: none;
-      margin: .75em 16px 0 0; } }
+      display: none; } }
+  #hamb-nav span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 75%;
+    background: #FFF5F5;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out; }
+  #hamb-nav span:nth-child(1) {
+    top: 2px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center; }
+  #hamb-nav span:nth-child(2) {
+    top: 13px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center; }
+  #hamb-nav span:nth-child(3) {
+    top: 24px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center; }
 
-#hamb-nav span {
-  display: block;
-  position: absolute;
-  height: 3px;
-  width: 75%;
-  background: #FFF5F5;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out; }
-
-#hamb-nav span:nth-child(1) {
-  top: 2px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center; }
-
-#hamb-nav span:nth-child(2) {
-  top: 13px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center; }
-
-#hamb-nav span:nth-child(3) {
-  top: 24px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center; }
+.open {
+  max-height: 300px; }
 
 #hamb-nav.open span:nth-child(1) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg); }
-
 #hamb-nav.open span:nth-child(2) {
   width: 0%;
   opacity: 0; }
-
 #hamb-nav.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg); }
-
-.open {
-  max-height: 300px; }
 
 /* -------------------------------- 
 
@@ -410,9 +405,6 @@ Responsive Top Menu
   font-weight: 800;
   background-color: rgba(44, 52, 59, 0.9);
   display: table; }
-  @media only screen and (min-width: 1170px) {
-    .menu {
-      display: block; } }
   .menu > ul {
     display: table-cell;
     vertical-align: middle;
@@ -497,7 +489,7 @@ Responsive Top Menu
       cursor: auto; } }
 
 .subMenu > ul {
-  background-color: #2C343B;
+  background-color: rgba(178, 212, 48, 0.3);
   font-size: .35em;
   height: 0;
   list-style-type: none;
@@ -525,9 +517,6 @@ Responsive Top Menu
         padding: 10px 15px; }
       .subMenu > ul li:first-child {
         margin-top: 90px; } }
-
-.subMenu > ul {
-  background-color: rgba(178, 212, 48, 0.3); }
 
 .touchDropDown {
   height: 0px; }
@@ -1135,7 +1124,7 @@ footer {
     margin: auto; }
     @media only screen and (min-width: 1170px) {
       footer .social {
-        padding-left: 5em;
+        padding-left: 16px;
         float: left; } }
   footer .linkedin, footer .github, footer .codepen {
     display: inline-block; }
@@ -1149,12 +1138,12 @@ footer {
     clear: both;
     width: 70px;
     height: auto;
-    margin: 2.2em auto;
-    padding-top: 5em; }
+    margin: 0 auto 3em auto;
+    padding-top: 1.5em; }
     @media only screen and (min-width: 1170px) {
       footer div#logo-bottom {
         float: left;
-        margin: 0 0 0 5em;
+        margin: 0 0 0 16px;
         display: inline-block; } }
   footer en {
     font-style: italic; }
@@ -1174,14 +1163,14 @@ footer {
         display: inline-block;
         top: -50px;
         float: left;
-        margin-left: 10em; } }
+        margin-left: 6em; } }
   footer p:last-child {
     font-size: .9em;
     margin-top: 1.2em; }
     @media only screen and (min-width: 1170px) {
       footer p:last-child {
         float: right;
-        margin-right: 5em; } }
+        margin-right: 16px; } }
 
 /* -------------------------------- 
 
