--- a/css/style.css
+++ b/css/style.css
@@ -1105,6 +1105,17 @@ main.main-content {
     #instaFeed li {
       width: auto; } }
 
+.parallax {
+  height: 700px;
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  @media only screen and (min-width: 1170px) {
+    .parallax {
+      background-attachment: fixed;
+      background-size: 70%; } }
+
 /* -------------------------------- 
 
 Footer
